# helix

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/demos/data/: events.csv  numeric.csv
examples/demos/specs/: demo_numeric.yaml
examples/intermagnet/data/: yellowknife_2025_01_01_to_09.csv
examples/intermagnet/specs/: demo_intermagnet.yaml
examples/specs/: demo_events.yaml
src/helix/cli/: main.py
src/helix/core/: cache.py  contracts.py  detect.py  pipeline.py  surface_fast.py  types.py
src/helix/io/: read.py  write.py
src/helix/operators/score/: base.py  ewma_residual_z.py  mad_z.py  registry.py
src/helix/specs/: load.py  validate.py
src/helix/stages/: aggregate.py  score.py  select_events.py
tests/: test_smoke.py
